Refactor code structure for improved readability and maintainability

--- a/ntb.ipynb
+++ b/ntb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "837660bf",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
     "            dirs.remove(\"node_modules\")\n",
     "            \n",
     "        for file in files:\n",
-    "            if file.endswith(\".tsx\") or file.endswith(\".ts\") or file.endswith(\".js\") or file.endswith(\"Dockerfile\"):\n",
+    "            if file.endswith(\".tsx\") or file.endswith(\".ts\") or file.endswith(\".js\") or file.endswith(\".json\") or file.endswith(\".css\") or file.endswith(\".jsx\"):\n",
     "                ruta_completa = os.path.join(root, file)\n",
     "                try:\n",
     "                    with open(ruta_completa, \"r\", encoding=\"utf-8\") as f:\n",
